deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: docker
  labels:
    app: myapp
spec:
  replicas: 3
  selector:
    matchLabels:
      app: myapp
  template:
    metadata:
      labels:
        app: myapp
    spec:
      containers:
      - name: dockerdep-10-app
        image: acrcontainer28.azurecr.io/acrcontainer28:1.0.0
        ports:
        - containerPort: 80
      imagePullSecrets:
       - name: nikitha
