dockerdep-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:docker
  labels:
    app: myapp
spec:
  replicas: 3
  selector:
    matchLabels:
      app: myapp
  template:
    metadata:
      labels:
        app: myapp
    spec:
      containers:
      - name: dockerdep-10-app
        image: dockerdep-10-app:latest
        ports:
        - containerPort: 80
